Tweaks to add a missing bonus for a climb and some platforms in forgotten-falls.

--- a/data/level/Forest/forgotten-falls.cfg
+++ b/data/level/Forest/forgotten-falls.cfg
@@ -2565,20 +2565,6 @@
 			"zsub_order": -8
 		},
 		{
-			"_uuid": "735195d48a674f80850fda2ecb11dbed",
-			"current_frame": "normal",
-			"custom": true,
-			"is_human": true,
-			"label": "_58c56878",
-			"objects_destroyed": {
-				"level": "forgotten-falls.cfg",
-				"objects": []
-			},
-			"type": "frogatto_playable",
-			"x": -1248,
-			"y": -1344
-		},
-		{
 			"_uuid": "02c3c6168b9d4800975f831eb91be9fe",
 			"current_frame": "normal",
 			"custom": true,
@@ -3750,6 +3736,50 @@
 			"type": "save_statue",
 			"x": 10873,
 			"y": -3891
+		},
+		{
+			"_uuid": "6195457134734499b76da7fc5b088734",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5ae126fb",
+			"type": "coin_gold_big",
+			"x": 4096,
+			"y": -1172
+		},
+		{
+			"_uuid": "b3333e83ee1d4ea591fe156df80def79",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_35ff3a2e",
+			"type": "pillar_block2",
+			"x": 10112,
+			"y": -4000
+		},
+		{
+			"_uuid": "d12ddda65cca4c878b48f4fb17e12800",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_632fb8ad",
+			"type": "pillar_block2",
+			"x": 10016,
+			"y": -4000
+		},
+		{
+			"_uuid": "d6215b4240da4469acc6a67e15fe5bcb",
+			"current_frame": "stand",
+			"custom": true,
+			"is_human": true,
+			"label": "_543c2fe2",
+			"objects_destroyed": {
+				"level": "forgotten-falls.cfg",
+				"objects": []
+			},
+			"property_data": {
+				"original_level_we_spawned_on": "forgotten-falls.cfg"
+			},
+			"type": "frogatto_playable",
+			"x": 10272,
+			"y": -4036
 		}
 	],
 	"dimensions": [-1280,-4992,11839,1247],
@@ -3802,6 +3832,26 @@
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_deep_parallax_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs
 ,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,,,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
@@ -4099,7 +4149,17 @@ nbr,nbr,,,,,,,,,,,,,,,,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "player"
+			"zorder": "waterfall_behind"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_bridge_tile_rear_parts"
 		},
 		{
 			"tiles": ",
@@ -4169,6 +4229,26 @@ nbr,nbr,,,,,,,,,,,,,,,,nbr,nbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 			"y": -32,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background_behind_trees"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_near_background"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -4398,6 +4478,26 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"zorder": "exterior_solid_ground_tiles"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_solid_ground_tiles_overlays"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_shelves_and_stairs"
+		},
+		{
 			"tiles": ",
 ,
 ,
@@ -4611,6 +4711,133 @@ tnk,tnk,tnk,tnk,tnk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk
 ,
 ,
 ,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr,fbr
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,,,,,,,,,,fbr
@@ -4663,9 +4890,69 @@ tnk,tnk,tnk,tnk,tnk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": 0,
+			"y": -4064,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "rail_tracks"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "near_player_foreground_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_scaffolding_foreground"
 		},
 		{
 			"tiles": ",
@@ -4727,6 +5014,36 @@ tnk,tnk,tnk,tnk,tnk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "water_surface"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_parallax_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Forgotten Falls",
@@ -4747,7 +5064,7 @@ tnk,tnk,tnk,tnk,tnk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,tnk,tnk
 				"rect": [3840,-2864,4416,-2400]
 			},
 			{
-				"color": [0.549019,0.0,0.0,0.274509],
+				"color": [0.549018,0.0,0.0,0.274509],
 				"object": "@eval deserialize('52f180dff02d423b9fbb3b0646c259bb')",
 				"rect": [288,1072,8128,1264]
 			}
