Fixed a really bizarre issue where the entire graphics output would get locked during cutscene skipping on ravenish ravine.

--- a/data/level/Forest/ravenish-ravine.cfg
+++ b/data/level/Forest/ravenish-ravine.cfg
@@ -23,23 +23,26 @@
 			"label": "berd_man",
 			"on_create": "
 				if(level.player.get_stored_event('moth_boss_fight_won'),
-					if(not level.player.get_stored_event('moth_boss_postfight_conversation'), [
-						level.player.store_event('moth_boss_postfight_conversation',1),
-						set(level.player.xy, [-750,-1650]),
-						(obj dangling_rope_controller <- get_object_or_die(level, 'dangling_rope')).attach(level.player),
-						set(level.player.animation, 'descend_rope'),
-						schedule(300, [	set(level.player.animation, 'fall'),
-										set(level.player.velocity_y, -400),
-										(obj dangling_rope_controller <- get_object_or_die(level, 'dangling_rope')).detach(level.player),
-										(obj frogatto_playable <- level.player).do_upon_landing( [def() fire_event(get_object_or_die(level,'berd_man'), 'landing_speech')] )
-									])
+					if(not level.player.get_stored_event('moth_boss_postfight_conversation'),
+						[
+							begin_skip_dialog_sequence(),
+							level.player.store_event('moth_boss_postfight_conversation',1),
+							set(level.player.xy, [-750,-1650]),
+							(obj dangling_rope_controller <- get_object_or_die(level, 'dangling_rope')).attach(level.player),
+							set(level.player.animation, 'descend_rope'),
+							schedule(300, [
+								set(level.player.animation, 'fall'),
+								set(level.player.velocity_y, -400),
+								(obj dangling_rope_controller <- get_object_or_die(level, 'dangling_rope')).detach(level.player),
+								(obj frogatto_playable <- level.player).do_upon_landing( [def() fire_event(get_object_or_die(level,'berd_man'), 'landing_speech')] )
+							])
 						]
 					)
 				)
 			",
 			"on_landing_speech": "speech_dialog(
-							set(level.player.facing, 1),
-							set(Berd.animation, 'emote_talk'), 
+					set(level.player.facing, 1),
+					set(Berd.animation, 'emote_talk'), 
 					Berd,	[~There you are!  I'm so sorry!~, 
 						~Don't worry about it.~, [speech_dialog(
 										set(level.player.animation, 'emote_geez'),
@@ -58,6 +61,7 @@
 										set(Berd.animation, 'emote_wry'),
 										[~Yes.~],
 							Frogatto,	[~...~],
+										end_skip_dialog_sequence(),
 						)],
 						~Thanks a lot!~,  [speech_dialog(
 										set(level.player.animation, 'emote_raisedfinger'),
@@ -86,8 +90,9 @@
 							Berd,		[~Come off it already!  <em>Really!</em>~],
 										set(level.player.animation, 'emote_nod'),
 							Frogatto,	[~You're right, I'm sorry.~],
+										end_skip_dialog_sequence(),
 						)],
-					]) where Berd = me, where Frogatto = level.player",
+				]) where Berd = me, where Frogatto = level.player",
 
 			"on_talk": "speech_dialog(
 							set(level.player.animation, 'emote_confused'),
