Fixed an intermittent crasher on a scheduled call, after the boss dies.  Set up the boss so you can't cheese it with small-dmg attacks.  Fixed the cleanup calls to catch all the new enemy/shot types that are now on the level.  Tweaked the number of hits the boss takes to be slightly smaller.

--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -36,6 +36,7 @@ properties: {
 			enum impale: 1.0,
 			enum lacerate: 1.0
 		}",
+		armor: "standard_thrown_damage * 2", //scaled to be below that of the explosion, which is standard_thrown_damage * 3
 	
 	
 		death_fx_type: "'mushroom-boss'",
@@ -300,7 +301,7 @@ properties: {
 		#-------------------------- constructor/destructor logic --------------------------#
 			epihittable_obj_constructor: "commands :: [
 				if(level.player.get_stored_event('mushroom_boss_fight_won'), remove_object(me)),
-				set_max_hitpoints({casual: standard_thrown_damage * 3 * 10, challenging: standard_thrown_damage * 3 * 15}),
+				set_max_hitpoints({casual: standard_thrown_damage * 3 * 8, challenging: standard_thrown_damage * 3 * 13}),
 			]",
 
 
@@ -347,7 +348,16 @@ properties: {
 				set(_mook_spawner.spawning_active, false),
 			]",
 			
-			clear_dangerous_items: "[remove_object(value) | value <- level.chars, value.type in ['mushroom_boss.big_shot','mushroom_boss.stream_shot', 'mushroom_jellyfish']]",
+			clear_dangerous_items: "[remove_object(value) | value <- level.chars, value.type in [
+				'mushroom_boss.big_shot',
+				'mushroom_boss.stream_shot',
+				'mushroom_boss.acid_dropper_big_shot',
+				'mushroom_boss.acid_dropper_projectile',
+				'mushroom_boss.sweeper_projectile',
+				'mushroom_walker_green',
+				'mushroom_bombardier',
+				'mushroom_jellyfish'
+			]]",
 
 		#-------------------------- positioning logic --------------------------#
 			spout_position: "def(obj mushroom_boss head) -> {x: int, y: int}
@@ -534,13 +544,17 @@ properties: {
 					velocity_y: shot_info.y,
 					rotate: shot_info.angle
 				}, [
-					schedule(20, child.fly_to([
-							{x: spout_position(upper_right_stalk).x, y: spawn_height},
-						], def() child.fly_to([
-							{x: spout_position(upper_left_stalk).x, y: spawn_height}
-						], def() child.force_death() 
+					schedule(20,
+						if(not _has_died, //if we're dead, these references are broken, so don't try to run the code
+							child.fly_to([
+									{x: spout_position(upper_right_stalk).x, y: spawn_height},
+								], def() child.fly_to([
+									{x: spout_position(upper_left_stalk).x, y: spawn_height}
+								], def() child.force_death() 
+								)
+							)
 						)
-					))
+					)
 				]) where shot_info = compute_shot_velocity(upper_right_stalk)
 			),
 			
@@ -551,13 +565,17 @@ properties: {
 					velocity_y: shot_info.y,
 					rotate: shot_info.angle
 				}, [
-					schedule(20, child.fly_to([
-							{x: spout_position(upper_left_stalk).x, y: spawn_height},
-						], def() child.fly_to([
-							{x: spout_position(upper_right_stalk).x, y: spawn_height}
-						], def() child.force_death() 
+					schedule(20, 
+						if(not _has_died, //if we're dead, these references are broken, so don't try to run the code
+							child.fly_to([
+									{x: spout_position(upper_left_stalk).x, y: spawn_height},
+								], def() child.fly_to([
+									{x: spout_position(upper_right_stalk).x, y: spawn_height}
+								], def() child.force_death() 
+								)
+							)
 						)
-					))
+					)
 				]) where shot_info = compute_shot_velocity(upper_left_stalk)
 			),
 			
