Bookshelf dialog for crevice village house 2, liberated and otherwise.

--- a/data/level/Seaside/crevice-village-house-2.cfg
+++ b/data/level/Seaside/crevice-village-house-2.cfg
@@ -167,6 +167,9 @@
 			"custom": true,
 			"label": "_7d9ae226",
 			"type": "wooden_shelves_big_books2",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": 352,
 			"y": -1664
 		},
@@ -257,6 +260,9 @@
 			"face_right": false,
 			"label": "_70bc5615",
 			"type": "wooden_shelves_big_books3",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": 530,
 			"y": -2016
 		},
@@ -387,6 +393,9 @@
 			"face_right": false,
 			"label": "_61bccf7a",
 			"type": "wooden_shelves_big_books",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": 480,
 			"y": -960
 		},
@@ -397,6 +406,9 @@
 			"face_right": false,
 			"label": "_66982475",
 			"type": "wooden_shelves_big_books3",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": 352,
 			"y": -960
 		},
@@ -427,6 +439,9 @@
 			"face_right": false,
 			"label": "_731ce3de",
 			"type": "wooden_shelves_big_books2",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": 288,
 			"y": -640
 		},
@@ -477,6 +492,9 @@
 			"face_right": false,
 			"label": "_6e563b3b",
 			"type": "wooden_shelves_big_books",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": -1024,
 			"y": 64
 		},
@@ -487,6 +505,9 @@
 			"face_right": false,
 			"label": "_5f4ad714",
 			"type": "wooden_shelves_big_books2",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": -896,
 			"y": 64
 		},
@@ -517,6 +538,9 @@
 			"face_right": false,
 			"label": "_7cf4890e",
 			"type": "wooden_shelves_big_books3",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": -1024,
 			"y": -224
 		},
@@ -811,6 +835,9 @@
 			"custom": true,
 			"label": "_11836230",
 			"type": "wooden_shelves_big_books3",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_raisedfinger'),
+			level.player, [~This seems like a\\nbad time to read.~])",
 			"x": -128,
 			"y": 352
 		},
