--- a/data/level/Seaside/liberated-crevice-village-house-2.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-2.cfg
@@ -78,6 +78,9 @@
 			"custom": true,
 			"label": "_11836230",
 			"type": "wooden_shelves_big_books3",
+			"on_talk": "speech_dialog(
+			set(level.player.animation, 'emote_talk'),
+			level.player, [~It says,\\n\"The Art of Office Chit-Chat.\"~])",
 			"x": -128,
 			"y": 352
 		},
