Bookshelf dialogue for Cubeaver's house.

--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -101,6 +101,9 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_57a67291",
+			"on_talk": "speech_dialog(
+                            set(level.player.animation, 'emote_talk'),
+                            level.player, [~It says,\\n\"Home Climbing and You.\"~])",
 			"type": "wooden_shelves_big_books2",
 			"x": 896,
 			"y": 256
@@ -110,6 +113,9 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_4455877a",
+			"on_talk": "speech_dialog(
+                            set(level.player.animation, 'emote_talk'),
+                            level.player, [~It says,\\n\"The Secret World of Plankton.\"~])",
 			"type": "wooden_shelves_big_books3",
 			"x": 928,
 			"y": -32
