Changed a bookshelf from previous commit.

--- a/data/level/Forest/tempo-outskirts-inside.cfg
+++ b/data/level/Forest/tempo-outskirts-inside.cfg
@@ -103,7 +103,7 @@
 			"label": "_57a67291",
 			"on_talk": "speech_dialog(
                             set(level.player.animation, 'emote_talk'),
-                            level.player, [~It says,\\n\"Home Climbing and You.\"~])",
+                            level.player, [~It says,\\n\"Advanced Parkour.\"~])",
 			"type": "wooden_shelves_big_books2",
 			"x": 896,
 			"y": 256
