Bookshelves for the radish's house.

--- a/data/level/Forest/tempo-village-house-3.cfg
+++ b/data/level/Forest/tempo-village-house-3.cfg
@@ -81,6 +81,9 @@
 			"custom": true,
 			"face_right": false,
 			"label": "_3d5c4433",
+			"on_talk": "speech_dialog(
+                            set(level.player.animation, 'emote_talk'),
+							level.player, [~A lot of books\\nabout climbing.~])",
 			"type": "wooden_shelves_big_books2",
 			"x": 550,
 			"y": -64
@@ -90,6 +93,9 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_3a4c8d6a",
+			"on_talk": "speech_dialog(
+                            set(level.player.animation, 'emote_talk'),
+                            level.player, [~It says,\\n\"Loving Yourself.\"~])",
 			"type": "wooden_shelves_big_books3",
 			"x": 224,
 			"y": -64
