Bookcase dialog for Moonlit Ramprt.

--- a/data/level/Dungeon/moonlit-ramparts.cfg
+++ b/data/level/Dungeon/moonlit-ramparts.cfg
@@ -2812,6 +2812,9 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_5d736c35",
+			"on_talk": "speech_dialog(
+                            set(level.player.animation, 'emote_talk'),
+                            level.player, [~It says,\\n\"Bansenshukai.\"~])",
 			"type": "wooden_shelves_big_books_milgram",
 			"x": 1536,
 			"y": -3776
