Tweaked the HUD display so that it tries to hide the HUD during dialogues.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1967,7 +1967,7 @@ on_draw: "[
 	),
 	set(should_display_hud, should_display_hud_now),
 	if(should_display_hud != should_display_hud_now, set(last_changed_should_display_hud, level.cycle)),
-] where should_display_hud_now = (level.zoom_current = 1) and (not level.id in [
+] where should_display_hud_now = (level.zoom_current = 1) and (not level.in_dialog) and (not level.id in [
 	'titlescreen.cfg',
 	'titlescreen-new-game-selector.cfg',
 	'inventory-screen.cfg',
