Adjust the camera release on camera controllers to no longer do the one-frame delay after letting go of the camera lock;  we may end up reverting or tweaking this if there are regressions, but I want a working example of the fix in source control.

--- a/data/level/Seaside/secluded-hut.cfg
+++ b/data/level/Seaside/secluded-hut.cfg
@@ -104,8 +104,9 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "target_tree",
-			"on_triggered": "speech_dialog(Berd,
-									set(level.zoom, 2),
+			"on_triggered": "[
+								schedule(10, ; set(level.zoom, 2)),
+								speech_dialog(Berd,
 									set(level.player.facing, 1),
 									set(level.focus, [Berd, level.player]),
 									
@@ -161,7 +162,8 @@
 									schedule(1, ; set(level.lock_screen, null)),
 									level.player.store_event('berds_post_airplane_boss_speech',1))
 									where Berd = (obj berd_npc <- get_object_or_die(level,'berd_man'))
-									where frogatto = level.player",
+									where frogatto = level.player
+							]",
 			"type": "tree_seaside1",
 			"x": -160,
 			"y": 168
