--- a/data/level/Seaside/secluded-hut.cfg
+++ b/data/level/Seaside/secluded-hut.cfg
@@ -104,9 +104,8 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "target_tree",
-			"on_triggered": "[
-								schedule(10, ; set(level.zoom, 2)),
-								speech_dialog(Berd,
+			"on_triggered": "speech_dialog(Berd,
+									set(level.zoom, 2),
 									set(level.player.facing, 1),
 									set(level.focus, [Berd, level.player]),
 									
@@ -162,8 +161,7 @@
 									schedule(1, ; set(level.lock_screen, null)),
 									level.player.store_event('berds_post_airplane_boss_speech',1))
 									where Berd = (obj berd_npc <- get_object_or_die(level,'berd_man'))
-									where frogatto = level.player
-							]",
+									where frogatto = level.player",
 			"type": "tree_seaside1",
 			"x": -160,
 			"y": 168
