--- a/data/objects/effects/misc/camera_controller.cfg
+++ b/data/objects/effects/misc/camera_controller.cfg
@@ -50,7 +50,7 @@ callback        | Either a function or a list of functions to be called when the
 	last_preview_smooth: {type: "bool", default: false,},
 	last_preview_route: {type: "bool", default: false,},
 	linked_object_list: {type: "[string]", default: [],}, //[obj triggerable]?
-	linked_delay: {type: "int", default: 0,},
+	linked_delay: {type: "int", default: 1,},
 	early_callback_offset: {type: "int", default: 0 },  //allows us to fire the callback to trigger the post-camera actions early, if we have a special desire to keep the camera-controller's lock active whilst that action takes place.  This is subtractive from the linked_delay.
 	callback: {type: "[function()->commands]", default: [],},
 	travel_time: { type: "decimal", default: 0.0,},
@@ -65,7 +65,7 @@ callback        | Either a function or a list of functions to be called when the
 	new_preview_path: "[[decimal,decimal]] <- if(start_with_player_as_first_node, [[decimal,decimal] <-
 		starting_camera_position or
 		
-		lib.standardize.camera(level)], []) +
+		lib.standardize.camera_without_zoom(level)], []) +
 		the_path +
 		if(release_control, [lib.standardize.natural_camera(level)], [])
 	
@@ -187,7 +187,7 @@ on_draw: "if(self in level.editor_selection,
 		//Now, if we're actually 'going' for real, we'll set the camera position and increment the camera travel time.	
 		//This is done in on_draw, because we need to catch the level before the first frame if we're not starting on Frogatto himself. This is used for the *dramatic* pan-in to the scene.
 		if(going, [
-			lib.standardize.set_camera(level, Point2d <- position_along_path(
+			lib.standardize.set_camera_without_zoom(level, Point2d <- position_along_path(
 				new_preview_path, travel_time )),
 			set(level.zoom_instant, lib.math.interpolate(decimal <- starting_camera_zoom, travel_time, target_zoom)),
 			
@@ -208,12 +208,12 @@ on_draw: "if(self in level.editor_selection,
 				where potentially_unlock_the_screen = 
 					if(release_control,
 						set(level.lock_screen, null),
-						set(level.lock_screen, [int] <- map(back(new_preview_path), int(value)))
+						lib.standardize.lock_screen(level, ([int, int] <- map(back(new_preview_path), int(value))))
 					), 
 			),
 		]),
 		if(holding and not going, [ 
-			lib.standardize.set_camera(level, Point2d <- position_along_path(new_preview_path, 1.0 ))
+			lib.standardize.set_camera_without_zoom(level, Point2d <- position_along_path(new_preview_path, 1.0 ))
 		]),
 		
 	]
@@ -229,7 +229,7 @@ on_button_pressed: "fire_event('start_sequence')",
 on_start_sequence: "[
 	set(travel_time, 0),
 	if(start_with_player_as_first_node or not path,
-		set(starting_camera_position, lib.standardize.camera(level)),
+		set(starting_camera_position, lib.standardize.camera_without_zoom(level)),
 		set(starting_camera_position, position_of_path_element_at_index(0) )
 	),
 	set(starting_camera_zoom, level.zoom_instant),
