Fixed the camera panning on ignominious interlude, since it seems to have been kludged into working around the bug we had in the camera controller, where it was mis-positioning at xy instead of mid_xy.

--- a/data/level/Forest/ignominious-interlude.cfg
+++ b/data/level/Forest/ignominious-interlude.cfg
@@ -881,7 +881,7 @@
 				"average_path": true,
 				"linked_object": "target2",
 				"path": [],
-				"release_control": true,
+				"release_control": false,
 				"speed": 5,
 				"start_with_player_as_first_node": false,
 				"target_zoom": 2,
@@ -947,6 +947,7 @@
 					frogatto,	[~Uh…~],
 					frogatto,	[~…~],
 					frogatto,	[~Round about, right now, this would be\\nthe perfect time for that feathered friend of ours.~],
+								schedule(1, ; set(level.lock_screen, null)),
 								frogatto.store_event('missing_berd_post_mushroom_boss_speech',1),
 								frogatto.scripted_move_to_x(70,-1, def() -> commands [schedule(1,fire_event(me, 'conversation_part_2'))])
 				),
