--- a/data/objects/props/furniture/wooden_shelves_big_books.cfg
+++ b/data/objects/props/furniture/wooden_shelves_big_books.cfg
@@ -18,6 +18,6 @@ animation: {
 	image: "props/furniture2.png",
 	rect: [0,0,63,79],
 	palettes: "@include data/palettes.cfg:interior_palettes",
-	interact_area: "all",
+	interact_area: [0,25,63,79],
 },
 }
