Prevent using fireplaces while standing on top of them

--- a/data/objects/props/furniture/fireplace.cfg
+++ b/data/objects/props/furniture/fireplace.cfg
@@ -121,7 +121,7 @@ animation: [
 	{
 		image: "props/fireplace.png",
 		pad: 0,
-		interact_area: "all",
+		interact_area: [0,16,79,47],
 		id: "normal",
 		rect: [0,0,79,63],
 		frames: 1,
@@ -131,7 +131,7 @@ animation: [
 	{
 		image: "props/fireplace.png",
 		pad: 0,
-		interact_area: "all",
+		interact_area: [0,16,79,47],
 		id: "burn",
 		rect: [0,64,79,127],
 		frames: 3,
