Draw padlocks behind NPCs, not over them

--- a/data/objects/props-interactive/locks/padlock.cfg
+++ b/data/objects/props-interactive/locks/padlock.cfg
@@ -1,6 +1,6 @@
 {
 id: "padlock",
-zorder: "@include data/zorder.cfg:player",
+zorder: "@include data/zorder.cfg:npcs",
 zsub_order: -10,
 prototype: ["standard_values"],
 
