Fix fireplace's is_burning flag to reflect actual status

--- a/data/objects/props/furniture/fireplace.cfg
+++ b/data/objects/props/furniture/fireplace.cfg
@@ -24,7 +24,7 @@ properties: {
 	])",
 	extinguish: "execute(me, [
 		animation('normal'),
-		set(is_burning, true),
+		set(is_burning, false),
 		fire_particles.turn_off,
 		sfx.turn_off,
 		remove_object(lighting),
