Added Hedge's new talking animation.

--- a/data/level/Seaside/crevice-village-house-1.cfg
+++ b/data/level/Seaside/crevice-village-house-1.cfg
@@ -748,25 +748,35 @@
 			"custom": true,
 			"face_right": false,
 			"label": "hedge_trapped",
-			"on_talk": "speech_dialog(self, [~Frogatto!  Is that you?~],
+			"on_talk": "speech_dialog(
+											set(self.animation, 'emote_talk'),
+							self,			[~Frogatto!  Is that you?~],
 				  							set(level.player.animation, 'emote_confused'),
 							level.player, 	[~Yeah.\\nHey, Hedge, you alright?~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~Eh, I've been better, but yeah, I'm okay.~],
+											set(self.animation, 'emote_talk'),
 											[~Besides the obvious cage situation.~],
 				  							set(level.player.animation, 'emote_confused'),
 							level.player, 	[~Yeah.\\nSad to say, I can't pick locks.\\nI got nothing.~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~So I'm stuck here, huh?~],
 				  							set(level.player.animation, 'emote_nod'),
 							level.player, 	[~Yep.~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~Phooey.~],
 											[~...~],
+											set(self.animation, 'emote_talk'),
 											[~Hmm, you know, I know one thing\\nthat might help you..~],
+											set(self.animation, 'emote_talk'),
 											[~There's supposedly\\na secret room in this house.~],
 				  							set(level.player.animation, 'emote_raisedfinger'),
 							level.player, 	[~Oh really?  Where at?~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~If I knew that, it wouldn't\\nbe much of a secret, would it?~],
 											set(level.player.animation, 'emote_impatient'),
 							level.player, 	[~Figures.\\nWell, thanks for the help!~],
+											set(self.animation, 'emote_talk'),
 							self, 			[~Good luck!~])",
 			"type": "hedge_npc",
 			"x": 1824,
