--- a/data/level/Seaside/liberated-crevice-village-house-1.cfg
+++ b/data/level/Seaside/liberated-crevice-village-house-1.cfg
@@ -160,22 +160,29 @@
 			"custom": true,
 			"face_right": false,
 			"label": "hedge",
-			"on_talk": "speech_dialog(self,	[~Hey, man, look at you!~],
-										[~I hear you had a big hand in scaring\\nthose guys off.  Way to go!~],
-				  				set(level.player.animation, 'emote_confused'),
-						   level.player,[~Eh, I'd hardly say they were 'scared' away,\\nbut I might have tipped the scales.~],
-						   self,		[~Well, whatever you did,\\nI'm glad they're gone!~],
-				  				set(level.player.animation, 'emote_geez'),
-						   level.player,[~Yeah, I just hope we don't\\nhave a repeat incident...~],
-						   self,		[~Uh ... why would that happen?~],
-				  				set(level.player.animation, 'emote_confused'),
-						   level.player,[~I don't know, but...\\nWhy did this happen in the first place?~],
-				  				set(level.player.animation, 'emote_raisedfinger'),
-						   				[~It's an important question,\\nand someone needs to look into it.~],
-						   self,		[~Would that someone possibly be you?~],
-				  				set(level.player.animation, 'emote_nod'),
-						   level.player,[~That is a distinct possibility.~],
-						   self,		[~Well, hey - you be careful, alright?\\nStay cool.~])",
+			"on_talk": "speech_dialog(
+											set(self.animation, 'emote_talk'),
+							self,			[~Hey, man, look at you!~],
+											set(self.animation, 'emote_talk'),
+											[~I hear you had a big hand in scaring\\nthose guys off.  Way to go!~],
+					  						set(level.player.animation, 'emote_confused'),
+							level.player,	[~Eh, I'd hardly say they were 'scared' away,\\nbut I might have tipped the scales.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Well, whatever you did,\\nI'm glad they're gone!~],
+											set(level.player.animation, 'emote_geez'),
+							level.player,	[~Yeah, I just hope we don't\\nhave a repeat incident...~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Uh ... why would that happen?~],
+											set(level.player.animation, 'emote_confused'),
+							level.player,	[~I don't know, but...\\nWhy did this happen in the first place?~],
+											set(level.player.animation, 'emote_raisedfinger'),
+											[~It's an important question,\\nand someone needs to look into it.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Would that someone possibly be you?~],
+											set(level.player.animation, 'emote_nod'),
+							level.player,	[~That is a distinct possibility.~],
+											set(self.animation, 'emote_talk'),
+							self,			[~Well, hey - you be careful, alright?\\nStay cool.~])",
 			"type": "hedge_npc",
 			"x": 1504,
 			"y": 1091
