--- a/data/objects/props-interactive/npcs/hedge_npc.cfg
+++ b/data/objects/props-interactive/npcs/hedge_npc.cfg
@@ -3,15 +3,44 @@ id: "hedge_npc",
 prototype: ["standing_npc"],
 solid_dimensions: ["npc"],
 solid_area: [5,15,32,46],
-animation: {
-	image: "npc/hedge.png",
-	pad: 3,
-	accel_y: 80,
-	interact_area: "all",
-	id: "stand",
-	rect: [2,2,39,49],
-	duration: 9,
-	frames: 5,
-	reverse: true,
-},
+
+
+
+on_end_emote_talk_anim: "animation('stand')",
+
+
+animation: [
+	{
+		"@base": true,
+		image: "npc/hedge.png",
+		pad: 3,
+		accel_x: 0,
+		accel_y: 80,
+		interact_area: "all",
+	},
+
+
+#-------------------------- core/movement animations --------------------------#
+	{
+		id: "stand",
+		rect: [2,2,39,49],
+		duration: 9,
+		frames: 5,
+		reverse: true,
+	},
+
+
+#-------------------------- emote animations --------------------------#
+	{
+		id: "emote_talk",
+		rect: [2,55,43,102],
+		frames: 5,
+		duration: 9,
+		reverse: true,
+		solid_area: [7,15,34,46],
+
+	},
+],
+
+
 }
