Fixed an issue where hearts being re-added to the HUD (such as when gaining a heart container during a cutscene) would cause the hearts, alone, to defy the current visibility status (mostly because as an object, they were being created anew, and we're not spamming those settings every frame).

--- a/data/objects/gui-components/hud-components/heart_display.cfg
+++ b/data/objects/gui-components/hud-components/heart_display.cfg
@@ -75,6 +75,8 @@
 			set(_active_child_hearts, heart_objects_for_current_hp)
 			;
 			map(_active_child_hearts, add_object(value)),
+			;
+			if(level.player is obj frogatto_playable, level.player.instantly_hide_or_show_hud)
 		]",
 	},
 	
