--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -1577,6 +1577,21 @@ properties: {
 		],
 		
 	]",
+
+	instantly_hide_or_show_hud: "if(should_display_hud_now, 
+		instantly_show_hud,
+		instantly_hide_hud
+	)",
+	
+	should_display_hud_now: "(level.zoom_current = 1) and (not level.in_dialog) and (not level.id in [
+		'titlescreen.cfg',
+		'titlescreen-new-game-selector.cfg',
+		'inventory-screen.cfg',
+		'main-map.cfg',
+		'titlescreen-arcade.cfg',
+		'titlescreen-load-game-selector.cfg',
+		'tea-with-milgram.cfg',
+	])",
 	
 	instantly_hide_hud: "[
 		[
@@ -1967,15 +1982,7 @@ on_draw: "[
 	),
 	set(should_display_hud, should_display_hud_now),
 	if(should_display_hud != should_display_hud_now, set(last_changed_should_display_hud, level.cycle)),
-] where should_display_hud_now = (level.zoom_current = 1) and (not level.in_dialog) and (not level.id in [
-	'titlescreen.cfg',
-	'titlescreen-new-game-selector.cfg',
-	'inventory-screen.cfg',
-	'main-map.cfg',
-	'titlescreen-arcade.cfg',
-	'titlescreen-load-game-selector.cfg',
-	'tea-with-milgram.cfg',
-])",
+]",
 
 on_process_start_jump: "[set_aerial_rotation(-2)]",
 	
