Don't run tests in release mode.

--- a/master-config.cfg
+++ b/master-config.cfg
@@ -3,5 +3,6 @@
 	arguments: [
 		"--module=frogatto4", //Renamed default module frogatto to frogatto4, because we don't want to choke on an old savefile from 1.3 or vice-versa.
 		"--log-file=log.txt", //Logs on Windows do not appear by default.
+		"--no-tests", //Don't run the unit tests, they're for engine development.
 	],
 }
