--- a/master-config.cfg
+++ b/master-config.cfg
@@ -1,4 +1,6 @@
 //This config file holds engine configuration parameters for the release version of Frogatto.
+//This file has no effect unless it is in the base project directory, beside the "modules" folder.
+//See the module.cfg for parameters common to development and release.
 {
 	arguments: [
 		"--module=frogatto4", //Renamed default module frogatto to frogatto4, because we don't want to choke on an old savefile from 1.3 or vice-versa.
