Copied braizers locations from master

--- a/data/level/Cave/blind-alley.cfg
+++ b/data/level/Cave/blind-alley.cfg
@@ -1842,12 +1842,173 @@
 				"stored_events": {
 					"blind_alley_platform1_active": 0,
 					"blind_alley_switch2_platform_active": 0,
+					"blind_alley_visible": 0,
 					"started_game": 1
 				}
 			},
 			"type": "frogatto_playable",
 			"x": -160,
 			"y": 1328
+		},
+		{
+			"_uuid": "196d570e9bb54047b6a8d39a6818cfd2",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_48ddd5a9",
+			"property_data": {
+				"event": "blind_alley_visible",
+				"original_level_we_spawned_on": "blind-alley.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": -21,
+			"y": 1337
+		},
+		{
+			"_uuid": "132d0044fefc45baa43ac763861432c9",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_640db5b3",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": -204,
+			"y": 1396
+		},
+		{
+			"_uuid": "71384bf91b004769a5e94d303432f125",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_27c03f8a",
+			"property_data": {
+				"event": "blind_alley_visible",
+				"original_level_we_spawned_on": "blind-alley.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 1349,
+			"y": 816
+		},
+		{
+			"_uuid": "461bbb0c17214e7498f169c98df5664b",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_678e9156",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 1369,
+			"y": 836
+		},
+		{
+			"_uuid": "5f4cb3981dba4d498eedaadf3ef3d649",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_2b6c129a",
+			"property_data": {
+				"event": "blind_alley_visible",
+				"original_level_we_spawned_on": "blind-alley.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 2191,
+			"y": 817
+		},
+		{
+			"_uuid": "f44aadbce7134a4aafbe5dff5ac29a6a",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5ace38ce",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 2372,
+			"y": 868
+		},
+		{
+			"_uuid": "0774eb3bbb0e4b7ba45ec12421addcda",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_32b7e2f8",
+			"property_data": {
+				"event": "blind_alley_visible",
+				"original_level_we_spawned_on": "blind-alley.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 4954,
+			"y": 692
+		},
+		{
+			"_uuid": "ccae354a879945a8a33cab3361a80e6e",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_7db49a46",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 4996,
+			"y": 740
+		},
+		{
+			"_uuid": "c8b0f52e7dca46ab95bc6b39149f0a75",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_1bbae24f",
+			"property_data": {
+				"event": "blind_alley_visible",
+				"original_level_we_spawned_on": "blind-alley.cfg"
+			},
+			"type": "brazier_temporary",
+			"x": 7130,
+			"y": 194,
+		},
+		{
+			"_uuid": "b424284a45a4491da5d4f6b5d331dd74",
+			"created": true,
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_5d1e552b",
+			"property_data": {
+				"_sound_volume_scale_cache": {
+					"max": 0,
+					"min": 0
+				},
+				"manually_adjusted_sound_volume": 0.0,
+				"sound_file": "ambient/fireplace.ogg"
+			},
+			"type": "sound_source_individual",
+			"x": 6964,
+			"y": 372
 		}
 	],
 	"dimensions": [-256,-1216,10271,2271],
